syntax = "proto3";

package proto;

// protoc --go_out=plugins=grpc:. proto/user.proto
option go_package = "proto/pb";


//The User service definition.
service User {
 rpc Login  (LoginRequest ) returns (LoginReply );
 rpc Logout (LogoutRequest) returns (LogoutReply);
 rpc Info   (InfoRequest  ) returns (InfoReply  );
}
message LoginRequest {
 string username = 1;
 string password = 2;
}
message LoginReply {
 string token = 1;
 int64 expireSeconds = 2;
}
message LogoutRequest {}
message LogoutReply {}
message InfoRequest {}
message InfoReply {}